--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 <body>
   <header class="heder">
     <nav class="heder-nav">
-      <a href="/" class="heder-logo link">WebStudio</a>
+      <a class="heder-logo link href=" /" lang="en">Web<span class="logo-accent">Studio</span></a>
       <ul class="heder-list list">
         <li class="heder-item"><a href="./index.html" class="heder-link link">Студия</a></li>
         <li class="heder-item"><a href="./portfolio.html" class="heder-link link">Портфолио</a></li>
@@ -105,7 +105,7 @@
     </section>
   </main>
   <footer class="footer">
-    <a href="/" class="footer-logo link">WebStudio</a>
+    <a class="footer-logo link href=" /" lang="en">Web<span class="footer-logo-accent">Studio</span></a>
     <ul class="footer-list list">
       <li class="footer-item">
         <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
